--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -255,6 +255,9 @@
     <Compile Include="Controls\DebugUserControl.Designer.cs">
       <DependentUpon>DebugUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\OptionsVirtualDeviceControl.xaml.cs">
+      <DependentUpon>OptionsVirtualDeviceControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\PadTabPages\General\PadControlImager.cs" />
     <Compile Include="Controls\PadTabPages\IPadControl.cs" />
     <Compile Include="Controls\PresetsGridUserControl.cs">
@@ -571,6 +574,7 @@
     <EmbeddedResource Include="Documents\Help.rtf" />
     <EmbeddedResource Include="Documents\Help_HidGuardian.rtf" />
     <Compile Include="Common\SettingsManager.LoadAndSync.cs" />
+    <EmbeddedResource Include="Documents\Help_ViGEmBus.rtf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -782,6 +786,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Controls\OptionsHidGuardianControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\OptionsVirtualDeviceControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
