Update user device control.

--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -321,6 +321,7 @@
       <DependentUpon>_TempWIN2WPF.com.cs</DependentUpon>
     </Compile>
     <Compile Include="Converters\BoolToImageSourceConverter.cs" />
+    <Compile Include="Converters\ConnectionClassToImageConverter.cs" />
     <Compile Include="Converters\MapTypeConverter.cs" />
     <Compile Include="Forms\BaseFormWithHeader.cs">
       <SubType>Form</SubType>
