Converting option WinForms to WPF.

--- a/x360ce.App.Beta/packages.config
+++ b/x360ce.App.Beta/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="5.0.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="5.0.3" targetFramework="net472" developmentDependency="true" />
 </packages>
