--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -250,6 +250,9 @@
     <Compile Include="Controls\AboutUserControl.xaml.cs">
       <DependentUpon>AboutUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\CloudControl.xaml.cs">
+      <DependentUpon>CloudControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\DebugControl.xaml.cs">
       <DependentUpon>DebugControl.xaml</DependentUpon>
     </Compile>
@@ -327,12 +330,6 @@
     </Compile>
     <Compile Include="Forms\BaseFormWithHeader.Designer.cs">
       <DependentUpon>BaseFormWithHeader.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\CloudUserControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\CloudUserControl.Designer.cs">
-      <DependentUpon>CloudUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\PadTabPages\DirectInputControl.cs">
       <SubType>UserControl</SubType>
@@ -483,9 +480,6 @@
     <EmbeddedResource Include="Forms\BaseFormWithHeader.resx">
       <DependentUpon>BaseFormWithHeader.cs</DependentUpon>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\CloudUserControl.resx">
-      <DependentUpon>CloudUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\PadTabPages\DirectInputControl.resx">
       <DependentUpon>DirectInputControl.cs</DependentUpon>
@@ -760,6 +754,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Controls\AboutUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\CloudControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
